DATA BASE CONNECTIVITY

--- a/Views/Home/signup.cshtml
+++ b/Views/Home/signup.cshtml
@@ -104,7 +104,7 @@
 
                                   var userName = $('#UserName').val();
 
-                                  //alert('User Name ='+ userName);
+                                  alert('User Name ='+ userName);
                                   $('#checking').show();
                                   $.getJSON("/Home/CheckUserName?UserName=" + userName, function (data) {
                                       $('#checking').hide();
