--- a/Views/Home/History.cshtml
+++ b/Views/Home/History.cshtml
@@ -18,23 +18,23 @@
     function GetMap1(Latitude, Longitude) {
         var loc = [];
         var pin = [];
-        alert(Latitude);
+    //    alert(Latitude);
         // Initialize the map
         map = new Microsoft.Maps.Map(document.getElementById("myMap"), { credentials: "AmJnm321kNaBNwBAB6KE2B6id4qUs7DcAS-tkfS_tG89XJ3Z_ltTUfrLhDFQOF60", mapTypeId: Microsoft.Maps.MapTypeId.road });
         for (var i = 0; i < 2; i++) {
-            alert(Latitude[i]);
+      //      alert(Latitude[i]);
             loc.push(new Microsoft.Maps.Location(Latitude[i], Longitude[i]));
 
 
             // Add a pin to the map
             pin.push(new Microsoft.Maps.Pushpin(loc[i]));
         }
-        alert(loc);
-        alert(pin);
+        //alert(loc);
+        //alert(pin);
         // Create a polyline
         // var lineVertices = new Array(loc);
         var line = new Microsoft.Maps.Polyline(loc);
-        alert(line);
+        //alert(line);
         map.setView({ center: loc2, zoom: 9 });
 
         map.entities.push(line);
@@ -54,8 +54,8 @@
 
     function directionsModuleLoaded(lat, long) {
         // Initialize the DirectionsManager
-        alert(lat);
-        alert(long);
+       // alert(lat);
+       // alert(long);
         var startWaypoint = [];
         directionsManager = new Microsoft.Maps.Directions.DirectionsManager(map);
         for (var i = 0; i < lat.length; i++) {
@@ -92,8 +92,8 @@
             var long = [];
             //iterate through the 'data' retireved
             $.each(data, function (item, location) {
-                alert(location.LAT);
-                alert(location.LONG);
+         //       alert(location.LAT);
+           //     alert(location.LONG);
                 //AddLocationPin(location.LAT, location.LONG);
                 lat.push(location.LAT);
                 long.push(location.LONG);
